<resources>
    <string name="app_name">BidderBidder</string>
    <string name="price_format">%,2d 원</string>
    <!-- Strings related to permission-->
    <string name="read_external_storage">미디어를 첨부하시려면, 앱 접근 권한을 허용해 주세요.</string>
    <!-- Strings related to loginType -->
    <string name="logintype_logo">땅땅마켓 로고</string>
    <string name="logintype_welcometext">비더비더로\n나만의 경매를 시작해보세요.</string>
    <string name="logintype_kakaologin">카카오로 로그인</string>
    <string name="logintype_naverlogin">네이버로 로그인</string>
    <string name="logintype_googlelogin">구글로 로그인</string>
    <string name="logintype_commonlogin">아이디로 로그인</string>
    <string name="logintype_registration">비더비더가 처음이라면?  <u>회원가입 하기</u></string>
    <!-- Strings related to login -->
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_signin">로그인</string>
    <string name="login_registration">회원가입</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <!-- Strings related to AcceptTerms-->
    <string name="accept_terms_essential">(필수)비더비더 이용약관</string>
    <string name="accept_terms_optional">(선택)비더비더 이용약관</string>
    <string name="accept_terms_accept_all">약관 전체동의</string>
    <string name="accept_terms_title">비더비더가 처음이시군요\n약관내용에 동의해주세요!</string>
    <!-- Strings related to PhoneAuth-->
    <string name="phoneauth_title">거의 다 왔어요!\n전화번호를 알려주세요</string>
    <string name="phoneauth_hint_phonenumber">휴대폰 번호 (-)없이 숫자만 입력</string>
    <string name="phoneauth_hint_authcode">인증번호</string>
    <string name="phoneauth_sending_authcode">전송중..</string>
    <string name="phoneauth_getauthcode">인증번호 전송</string>
    <string name="phoneauth_resend">재전송</string>
    <string name="phoneauth_nextstep">다음</string>
    <string name="phoneauth_number_is_valid">휴대폰 번호가 올바르네요</string>
    <string name="phoneauth_number_is_invalid">휴대폰 번호가 올바르지 않아요</string>
    <string name="phoneauth_invalid_verification_code_type">ERROR_INVALID_VERIFICATION_CODE</string>
    <string name="phoneauth_invalid_verification_code_message">인증 번호가 다릅니다!</string>
    <string name="phoneauth_session_expired_type">ERROR_SESSION_EXPIRED</string>
    <string name="phoneauth_session_expired_message">인증 번호가 만료됐습니다.\n인증 번호 재전송을 해주세요!</string>
    <string name="phoneauth_alert_message">인증번호를 발송하였습니다.\n 인증번호가 오지 않을 경우 정보를 다시 확인 해 주세요.</string>
    <string name="phoneauth_invalid_verification_code_alert">인증 번호가 올바르지 않습니다.\n다시 입력해주세요.</string>
    <string name="phoneauth_session_expired_alert">유효시간이 초과 되었습니다.\n다시 인증 요청해 주세요.</string>
    <!-- Strings related to Id-->
    <string name="registration_id_title">반가워요!\n이메일을 입력해주세요</string>
    <string name="registration_id_input">아이디</string>
    <string name="registration_id_hint">이메일을 입력해주세요</string>
    <string name="registration_id_duplication_check">중복확인</string>
    <string name="registration_id_is_Invalid">올바르지 않은 이메일이에요!</string>
    <string name="registration_id_is_duplicated">이미 존재하는 이메일이에요!</string>
    <string name="registration_id_is_ok">사용 가능한 이메일이에요!</string>
    <!-- Strings related to Password-->
    <string name="registration_password_title">영차영차!\n비밀번호를 입력해주세요</string>
    <string name="registration_password_input">비밀번호를 입력해주세요</string>
    <string name="registration_confirm_password_input">다시 한 번 더 비밀번호를 입력해주세요</string>
    <string name="registration_password_condition_length">12자 이상 24자 이하</string>
    <string name="registration_password_condition_character_alphabet">영어 포함</string>
    <string name="registration_password_condition_character_number">숫자 포함</string>
    <string name="registration_password_is_not_same">비밀번호가 일치하지 않아요!</string>
    <string name="registration_password_is_same">비밀번호가 일치해요!</string>
    <!-- Strings related to Register -->
    <string name="registration_toolbar_accept_terms">약관동의</string>
    <string name="registration_toolbar_accept_term_detail">비더비더 이용약관</string>
    <string name="registration_toolbar_user_registration">회원가입</string>의
    <string name="registration_button_to_next">다음</string>
    <!-- Strings related to ProductList -->
    <string name="productlist_load_more">더보기</string>
    <string name="productlist_expired">마감</string>
    <string name="productlist_remain_time">남은 시간: %1s</string>
    <!-- Strings related to Bottom Navigation -->
    <string name="bottom_home">홈</string>
    <string name="bottom_search">검색</string>
    <string name="bottom_writing">글쓰기</string>
    <string name="bottom_chatting">채팅</string>
    <string name="bottom_mypage">MY</string>
    <!-- Strings related to Toolbar -->
    <string name="toolbar_search">검색</string>
    <string name="toolbar_alarm">알림</string>
    <!-- Strings related to Product Registration -->
    <string name="product_registration_button">등록</string>
    <string name="product_registration_category">카테고리</string>
    <string name="product_registration_title">내 물건 등록</string>
    <string name="product_registration_button_to_album">이미지 선택 버튼</string>
    <string name="product_registration_product_title">제목</string>
    <string name="product_registration_product_hope_price">희망 가격 (선택사항)</string>
    <string name="product_registration_product_opening_bid">입찰 시작가</string>
    <string name="product_registration_product_tick">호가</string>
    <string name="product_registration_product_expiration">경매 기간 (최대 72시간)</string>
    <string name="product_registration_product_content">게시글 내용을 작성해주세요.</string>
    <string name="product_registration_album_image">앨범 이미지</string>
    <string name="product_registration_selected_image">선택한 이미지</string>
    <string name="product_registration_represent_image">대 표</string>
    <string name="product_registration_error_minimum_bid">"최소 입찰가는 희망 가격보다 작아야 합니다."</string>
    <!-- Strings related to album list -->
    <string name="album_selected_button_complete">완료</string>
    <string name="album_selected_error_image">불러올 수 없는 이미지 입니다.</string>
    <!-- Strings related to alert dialog -->
    <string name="alert_dialog_with_accpet">네</string>
    <string name="alert_dialog_with_decline">아니오</string>
    <string name="alert_dialog_with_check">확인</string>
    <!-- Strings related to Product Detail -->
    <string name="product_detail_picture_count">%1d / %2d</string>
    <string name="product_detail_category_and_time">%1s • %2s</string>
    <string name="product_detail_remain_time_divider">:</string>
    <string name="product_detail_expired">경매 마감</string>
    <string name="product_detail_before_now">방금 전</string>
    <string name="product_detail_before_hours">%1d시간 전</string>
    <string name="product_detail_before_days">%1d일 전</string>
    <string name="product_detail_before_months">%1d달 전</string>
    <string name="product_detail_before_years">%1d년 전</string>
    <string name="product_detail_minimum_bid">최소입찰가</string>
    <string name="product_detail_hope_price">즉시구매가</string>
    <string name="product_detail_btn_buy">즉시 구매하기</string>
    <string name="product_detail_btn_bid">입찰하기</string>
    <string name="product_detail_bidder_count">입찰 현황 %1d</string>
    <string name="product_detail_tick">입찰 단위 %,2d원</string>
    <string name="product_detail_rank">%1d등</string>
    <string name="product_detail_secret_rank">*1–3등은 비공개 처리됩니다</string>
    <string name="product_detail_secret_price">비공개</string>
    <!-- Strings related to time -->
    <string name="time_days">%1d일</string>
    <string name="time_hours">%1d시간</string>
    <string name="time_minutes">%1d분</string>
    <string name="time_seconds">%1d초</string>
</resources>
