<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_logintype"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/fragment_horizontal_margin"
    android:paddingEnd="@dimen/fragment_horizontal_margin"
    tools:context=".ui.login_type.LoginTypeFragment">

    <ImageView
        android:id="@+id/imageView_logintype_logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:contentDescription="@string/logintype_logo"
        android:src="@drawable/hammer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textview_logintype_welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logintype_welcometext"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logintype_logo"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button_logintype_kakaologin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logintype_naverlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <Button
        android:id="@+id/button_logintype_naverlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logintype_kakaologin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/button_logintype_commonlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logintype_commonlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>