<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.fakedevelopers.bidderbidder.ui.register.UserRegistrationViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin">

        <include
            android:id="@+id/include_id_title"
            layout="@layout/include_user_registration_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:title="@{@string/registration_id_title}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/bidderbidder_primary"
            app:hintTextColor="@color/bidderbidder_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_id_title"
            app:layout_constraintVertical_bias="0.1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_id"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:ems="10"
                android:hint="@string/registration_id_input"
                android:text="@={vm.inputUserId}"
                android:textColorHint="@color/edit_text_hint"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview_id_duplication_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_id"
            tools:text="@string/registration_id_is_ok"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_id_duplication_check"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/registration_id_duplication_check"
            android:textSize="12sp"
            android:background="@drawable/dub_check_button"
            android:onClick="@{() -> vm.isUserIdDuplicated()}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_id_duplication_info" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
