<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.fakedevelopers.bidderbidder.ui.register.UserRegistrationViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin">

        <include
            android:id="@+id/include_password"
            layout="@layout/include_user_registration_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/registration_password_title}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{() -> vm.checkPasswordCondition()}"
                android:background="@drawable/text_input_white_background"
                android:ems="10"
                android:hint="@string/registration_password_input"
                android:text="@={vm.inputUserPassword}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password">

            <TextView
                android:id="@+id/textview_password_condition_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawablePadding="5dp"
                android:enabled="false"
                android:text="@string/registration_password_condition_length"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/check_mark" />

            <TextView
                android:id="@+id/textview_password_condition_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:enabled="false"
                android:text="@string/registration_password_condition_character"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/check_mark" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password_confirm"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_white_background"
                android:ems="10"
                android:hint="@string/registration_confirm_password_input"
                android:text="@={vm.inputConfirmUserPassword}"
                android:afterTextChanged="@{() -> vm.checkPasswordConfirm()}"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview_password_confirm_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="invisible"
            android:drawablePadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password_confirm"
            tools:text="@string/registration_password_is_same"
            tools:visibility="visible"
            app:drawableLeftCompat="@drawable/bang_mark" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
