<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.phone_auth.PhoneAuthFragment">
    <data>
        <variable
            name="vm"
            type="com.fakedevelopers.bidderbidder.ui.register.phone_auth.PhoneAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin">

        <include
            android:id="@+id/include_phoneauth_title"
            layout="@layout/include_user_registration_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/phoneauth_title}" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_phoneauth_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_register_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:boxStrokeColor="@color/bidderbidder_primary"
                app:hintEnabled="false"
                app:hintTextColor="@color/bidderbidder_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_register_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/phoneauth_hint_phonenumber"
                    android:inputType="numberDecimal"
                    android:text="@={vm.phoneNumber}"
                    android:textColorHint="@color/edit_text_hint"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_phoneauth_send_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/auth_send_button"
                android:text="@string/phoneauth_getauthcode"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_phoneauth_authcode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/bidderbidder_primary"
                app:hintTextColor="@color/bidderbidder_primary"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_phoneauth_authcode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/phoneauth_hint_authcode"
                    android:inputType="numberDecimal"
                    android:text="@={vm.authCode}"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:maxLength="6"
                    android:textColorHint="@color/edit_text_hint"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_phoneauth_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:text="@={vm.remainTime}"
                android:textSize="12sp"
                android:visibility="invisible"
                tools:text="02:00"
                tools:visibility="visible" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
