<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">
    <data>
        <variable
            name="vm"
            type="com.fakedevelopers.bidderbidder.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingEnd="@dimen/fragment_horizontal_margin">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BDBD"
            android:textColor="@color/bidderbidder_primary"
            android:textSize="@dimen/login_logo_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_login_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edittext_height"
            android:layout_marginBottom="@dimen/login_edittext_id_margin"
            app:boxStrokeColor="@color/bidderbidder_primary"
            app:hintTextColor="@color/bidderbidder_primary"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/login_id"
                android:text="@={vm.email}"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/login_edittext_text_size"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_edittext_height"
            android:layout_marginBottom="@dimen/login_password_to_signin_margin"
            app:boxStrokeColor="@color/bidderbidder_primary"
            app:hintTextColor="@color/bidderbidder_primary"
            app:layout_constraintBottom_toTopOf="@+id/include_login_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:text="@={vm.passwd}"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/login_edittext_text_size"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/include_login_signin"
            layout="@layout/include_long_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/long_button_height"
            app:buttonText="@{@string/login_signin}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/textview_login_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_text_button_margin"
            android:text="@string/login_registration"
            android:textColor="@color/small_text_button"
            android:textSize="@dimen/small_text_button_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_login_signin"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textview_login_find_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_text_button_margin"
            android:text="@string/login_find_account"
            android:textColor="@color/small_text_button"
            android:textSize="@dimen/small_text_button_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_login_signin"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
